sampler/chain/projects/spring-boot/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/builder/ParentContextCloserApplicationListener.java:45: error: [NullAway] (INDEX= 623) (Covered) @NonNull field context not initialized
	private ApplicationContext context;
	                           ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/webservices/client/HttpWebServiceMessageSenderBuilder.java:39: error: [NullAway] (INDEX= 111) (Covered) @NonNull field connectTimeout not initialized
	private Duration connectTimeout;
	                 ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/context/properties/ConfigurationPropertiesBean.java:259: error: [NullAway] (INDEX= 121) (Covered) returning @Nullable expression from method with @NonNull return type
			return null;
			^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/diagnostics/analyzer/BindFailureAnalyzer.java:80: error: [NullAway] (INDEX= 652) (Covered) returning @Nullable expression from method with @NonNull return type
		return (StringUtils.hasText(failure.getMessage()) ? failure.getMessage() : cause.getMessage());
		^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/logging/DelegatingLoggingSystemFactory.java:50: error: [NullAway] (INDEX= 67) (Covered) returning @Nullable expression from method with @NonNull return type
		return null;
		^
	(see http://t.uber.com/nullaway )
